# peregrine

./: CLAUDE.md  Cargo.toml  README.md  devbox.json  todo.md
.claude/: settings.json
.claude/commands/: todo.md
.github/workflows/: ci.yml
aerie_lander/: Cargo.toml
aerie_lander/src/: main.rs
aerie_lander/src/model/: apss.rs  comm.rs  dsn.rs  eng.rs  heatprobe.rs  ids.rs  mod.rs  power.rs  seis.rs
aerie_lander/src/model/data/: hk_model.rs  mod.rs
peregrine/: Cargo.toml
peregrine/src/: activity.rs  exec.rs  history.rs  lib.rs  macro_prelude.rs  operation.rs  reexports.rs  resource.rs  timeline.rs
peregrine/src/internal/: exec.rs  history.rs  macro_prelude.rs  mod.rs  placement.rs  timeline.rs
peregrine/src/internal/operation/: grounding.rs  initial_conditions.rs  mod.rs  node_impls.rs
peregrine/src/internal/resource/: basic.rs  bigdecimal.rs  group.rs  impls.rs  mod.rs  nalgebra.rs  num.rs  uom.rs
peregrine/src/operation/: grounding.rs  initial_conditions.rs  mod.rs  ungrounded.rs
peregrine/src/public/: activity.rs  initial_conditions.rs  mod.rs  plan.rs  session.rs
peregrine/src/public/resource/: builtins.rs  mod.rs  piecewise.rs  polynomial.rs  timer.rs
peregrine/src/resource/: builtins.rs  impls.rs  mod.rs  piecewise.rs  polynomial.rs  timer.rs  util.rs
peregrine/tests/: caching.rs  data_macro.rs  delay_macro.rs  graph_structuring.rs  history.rs  nalgebra.rs  reactive_daemon.rs  resource_defaults.rs  resource_groups.rs  util.rs
peregrine_macros/: Cargo.toml
peregrine_macros/src/: data.rs  lib.rs  maybe_hash.rs  node.rs
peregrine_macros/src/activity/: input.rs  mod.rs  operation.rs  output.rs
peregrine_macros/src/model/: input.rs  mod.rs  output.rs
peregrine_macros/src/operation/: input.rs  mod.rs  output.rs
peregrine_macros/src/resource/: input.rs  mod.rs  output.rs
perf/: Cargo.toml
perf/perf_macros/: Cargo.toml
perf/perf_macros/src/: lib.rs
perf/src/: main.rs
potato_sat/: Cargo.toml
potato_sat/src/: main.rs
potato_sat/src/activities/: recharge_potato.rs
serde_closure/: Cargo.toml
serde_closure/serde_closure_derive/: Cargo.toml
serde_closure/serde_closure_derive/src/: lib.rs
serde_closure/src/: lib.rs
serde_closure/tests/: test.rs
