[package]
name = "peregrine"
version = "0.1.0"
edition = "2024"

authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
description = "A discrete event simulation engine similar to NASA-AMMOS's Aerie-Merlin."
readme = "README.md"
repository = "https://github.com/JoelCourtney/peregrine"
license = "MIT OR Apache-2.0"
keywords = ["simulation"]
categories = ["aerospace::simulation", "simulation"]

[features]
default = ["compatibility", "serde"]

serde = []
pregenerate_nodes = ["peregrine_macros/pregenerated"]

compatibility = ["uom", "bigdecimal", "nalgebra"]
uom = ["dep:uom"]
bigdecimal = ["dep:bigdecimal"]
nalgebra = ["dep:nalgebra"]

[dependencies]

## INTERNAL
peregrine_macros = { path = "../peregrine_macros" }

## SERIALIZATION
# For serializing/deserializing plans, sim history, etc.
# Also used to hash initial condition nodes.
serde = { version = "1.0.219", features = ["derive", "rc"] }
# A non-self-describing efficient serde backend.
bincode = { version = "2.0.1", features = ["serde"] }
# Used to serialize arrays with const generics (such as polynomials).
serde_arrays = "0.1.0"
typetag = "0.2.20"

## HISTORY
# A fast stable hashing algorithm, used for history caching.
ahash = { version = "0.8.11", features = ["compile-time-rng"] }
# A concurrent hashmap for storing history. Used for copiable resources.
dashmap = { version = "7.0.0-rc2", features = ["serde"] }
# Used to store histories, one entry per data type.
type-map = "0.5.0"
# Used for serializing and deserializing history.
type_reg = { version = "0.9.0", features = ["untagged"] }
# Used to collect serializers and deserializers for resource histories.
inventory = "0.3.20"
# A custom version (see relative path) of the unmaintained serde closure crate.
# Used to hash closure inputs captured in the op! macro.
serde_closure = { path = "../serde_closure" }
# Used to hash floats
ordered-float = "5.0.0"

## MEMORY
# An arena allocator used for Futures during simulation, and operations trait objects.
bumpalo-herd = "0.1.2"
# A replacement of std Vec that can avoid heap allocations for small arrays.
smallvec = { version = "2.0.0-alpha.10", features = ["serde"] }
# A binary tree map optimized for batch insertion. Used in operation timelines.
immutable-chunkmap = "2.0.6"
# An arena allocator used to buffer timeline insertions.
slab = "0.4.9"

## ASYNC
# Used to block on and join futures in a sync context.
parking_lot = { version = "0.12.3", features = ["hardware-lock-elision"] }
# Used to collect simulation results from operations in a view range.
oneshot = "0.1.11"

## PARALLELISM
# The execution core of peregrine. A work-stealing executor for CPU-bound synchronous code.
rayon = "1.10.0"
# Used for the `SegQueue` type for collecting simulation errors.
crossbeam = "0.8.4"

## TIME
# A timekeeping library made for space missions, that follows the same standards as SPICE.
hifitime = "4.0.2"

## MISC
# Used for convience, not having to manually implement simple traits.
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "error"] }
# Used for implementing common resource abstractions that use numerics.
num = { version = "0.4.3", features = ["serde"] }
# Used to easily copy-paste a declaration multiple times with duck-typed inputs.
duplicate = "2.0.0"
# Used in the initial conditions macro to detect types that have defaults.
spez = "0.1.2"
# Used in the core Upstream/Downstream traits to differentiate between multiple reads and writes.
castaway = "0.2.3"

## ERROR HANDLING
# Used to allow modellers to return errors from activities and operations
anyhow = "1.0.97"

## COMPATIBILITY
uom = { version = "0.37.0", features = ["serde"], optional = true }
bigdecimal = { version = "0.4.8", features = ["serde"], optional = true }
nalgebra = { version = "0.33.2", features = ["serde", "serde-serialize"], optional = true }

[dev-dependencies]
rand = "0.9.0"
once_cell = "1.19.0"
