[package]
name = "peregrine_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
pregenerated = []

[dependencies]
proc-macro2 = "1.0.93"
syn = { version = "2.0.98", features = ["full", "extra-traits"] }
quote = "1.0.38"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
regex = "1.11.1"
rand = "0.9.0"
heck = "0.5.0"
