[package]
name = "perf"
version = "0.1.0"
edition = "2024"

[features]
nightly = ["peregrine/nightly"]

[dependencies]
peregrine = { path = "../peregrine", features = ["pregenerate_nodes", "serde"] }
perf_macros = { path = "perf_macros" }
serde = { version = "1.0.219", features = ["derive"] }
typetag = "0.2.20"
clap = { version = "4.5.32", features = ["derive"] }

[profile.release]
debug = true

